Add tests and clean up code (#776)